--- a/Frontend/components/css/Header.css
+++ b/Frontend/components/css/Header.css
@@ -8,11 +8,15 @@
 }
 
 .logo-title {
+  display: flex;
+  align-items: center;
   font-size: 1.6rem;
   font-weight: bold;
-  color: white;
-  margin-right: 2rem;
-  white-space: nowrap;
+}
+
+.logo-img {
+  height: 46px; 
+  margin-right: 9px;
 }
 
 .nav {
